estilos bbanner azul totoro.gif

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Data Lovers</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-  <p>hola brendi!</p>
-  <p>prueba 2 brendis holi!</p>
-    <div id="root"></div>
-    <script src="main.js" type="module"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>Data Lovers</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Jost&family=Kantumruy+Pro:wght@700&display=swap"
+    rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+
+<body>
+  <header>
+    <div class="banner"><img class="imgBanner" src="img/700x170pxBannerTotoroAzul.gif" alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
+  </header>
+  <main class="conteiner">
+   
+    <div class="fondoTo"></div>
+    <div class="cajafilms" id="root">
+      <!-- aqui van las tarjetas de forma dinamica -->
+    </div>
+  </main>
+  <script src="main.js" type="module"></script>
+</body>
+
 </html>
