pruebas de color en tarjetas

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+
   <title>Data Lovers</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Jost&family=Kantumruy+Pro:wght@700&family=La+Belle+Aurore&display=swap"
+    rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Jost&family=Kantumruy+Pro:wght@700&display=swap"
