se ingresa barra footer y se le da estilo en css

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,18 @@
     <div class="banner"><img class="imgBanner" src="img/700x170pxBannerTotoroAzul.gif" alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
   </header>
   <main class="conteiner">
+    <div class="menuBar"> 
+    <p class="desplegables">Aquí van los menús desplegables con las funciones</p> 
+    </div>
    
     <div class="fondoTo"></div>
     <div class="cajafilms" id="root">
       <!-- aqui van las tarjetas de forma dinamica -->
     </div>
   </main>
+  <footer class="footer">
+    <img class="imgBanner" src="img/Barra footer.jpeg" alt="">
+  </footer>
   <script src="main.js" type="module"></script>
 </body>
 
