sprint 2 estructura header+tarjetas+footer

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 
 <head>
   <meta charset="utf-8">
-
   <title>Data Lovers</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,14 +18,19 @@
 
 <body>
   <header>
-    <h1>Studio Ghibli's movies</h1>
+    <div class="banner"><img class="imgBanner" src="img/700x170pxBannerTotoroAzul.gif" alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
   </header>
   <main class="conteiner">
-    <div class="fondoTo"></div>
+    <div class="menuBar"> 
+      <p class="desplegables">menú</p> 
+      </div>
     <div class="cajafilms" id="root">
       <!-- aqui van las tarjetas de forma dinamica -->
     </div>
   </main>
+  <footer class="footer">
+    <img class="imgBanner" src="img/Barra footer.jpeg" alt="">
+  </footer>
   <script src="main.js" type="module"></script>
 </body>
 
