maqueta html barra de menús desplegables

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,35 @@
 
 <body>
   <header>
-    <div class="banner"><img class="imgBanner" src="img/700x170pxBannerTotoroAzul.gif" alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
+    <div class="banner"><img class="imgBanner" src="img/700x170pxBannerTotoroAzul.gif"
+        alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
   </header>
   <main class="conteiner">
-    <div class="menuBar"> 
-      <p class="desplegables">menú</p> 
-      </div>
+    <div class="menuBar">
+      <ul class="nav">
+        <li class="menu1"><a href="">Ordenar</a>
+          <ul>
+            <li class="menu2"><a href="">Año Asc</a></li>
+            <li class="menu2"><a href="">Año Desc</a></li>
+          </ul>
+        </li>
+        <li class="menu1"><a href="">Filtrar</a>
+          <ul>
+            <li class="menu2"><a href="">Director</a>
+              <ul>
+                <li class="menu3"><a href="">Hayao Miyazaki</a></li>
+                <li class="menu3"><a href="">Isao Takahata</a></li>
+                <li class="menu3"><a href="">Yoshifumi Kondō</a></li>
+                <li class="menu3"><a href="">Hiroyuki Morita</a></li>
+                <li class="menu3"><a href="">Gorō Miyazaki</a></li>
+                <li class="menu3"><a href="">Hiromasa Yonebayashi</a></li>
+              </ul>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+    
     <div class="cajafilms" id="root">
       <!-- aqui van las tarjetas de forma dinamica -->
     </div>
