funcion ordenar separada en modulos sin acceder al dom + cambio en tamao de tarjetas en css

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
     <div class="banner"><img class="imgBanner" src="img/700x170pxBannerTotoroAzul.gif" alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
   </header>
   <main class="conteiner">
-    <div class="menuBar"> 
+    <div class="menuBar">
       <p class="desplegables">menú</p> 
       </div>
     <div class="cajafilms" id="root">
@@ -32,6 +32,7 @@
     <img class="imgBanner" src="img/Barra footer.jpeg" alt="">
   </footer>
   <script src="main.js" type="module"></script>
+  <script src="data.js" type="module"></script>
 </body>
 
 </html>
