separamos funciones de ordenar y filtrar haMi en modulos data.js main.js se ve en dom

--- a/src/index.html
+++ b/src/index.html
@@ -26,20 +26,20 @@
       <ul class="nav">
         <li class="menu1"><a href="">Ordenar</a>
           <ul>
-            <li class="menu2"><a href="">Año Asc</a></li>
-            <li class="menu2"><a href="">Año Desc</a></li>
+            <li class="menu2" id="asc"><a href="">Año Asc</a></li>
+            <li class="menu2" id="desc"><a href="">Año Desc</a></li>
           </ul>
         </li>
         <li class="menu1"><a href="">Filtrar</a>
           <ul>
             <li class="menu2"><a href="">Director</a>
               <ul>
-                <li class="menu3"><a href="">Hayao Miyazaki</a></li>
-                <li class="menu3"><a href="">Isao Takahata</a></li>
-                <li class="menu3"><a href="">Yoshifumi Kondō</a></li>
-                <li class="menu3"><a href="">Hiroyuki Morita</a></li>
-                <li class="menu3"><a href="">Gorō Miyazaki</a></li>
-                <li class="menu3"><a href="">Hiromasa Yonebayashi</a></li>
+                <li class="menu3" id="haMi"><a href="">Hayao Miyazaki</a></li>
+                <li class="menu3" id="isTa"><a href="">Isao Takahata</a></li>
+                <li class="menu3" id="yoKo"><a href="">Yoshifumi Kondō</a></li>
+                <li class="menu3" id="hiMo"><a href="">Hiroyuki Morita</a></li>
+                <li class="menu3" id="goMi"><a href="">Gorō Miyazaki</a></li>
+                <li class="menu3" id="hiYo"><a href="">Hiromasa Yonebayashi</a></li>
               </ul>
             </li>
           </ul>
