ultimos cambios intento 2 de calculo

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
     </div>
   </main>
   <footer class="footer">
+    <p id="calculo"></p>
     <img class="imgBanner" src="img/Barra footer.jpeg" alt="">
   </footer>
   <script src="main.js" type="module"></script>
