textos en ingles, y css a footer, modificamos tipos fuentes didact gothic

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
   <main class="conteiner">
     <div class="menuBar">
       <ul class="nav">
-        <li class="menu1"><a href="">Ordenar</a>
+        <li class="menu1"><a href="">Sort by</a>
           <ul>
-            <li class="menu2" id="asc"><a href="">Año Asc</a></li>
-            <li class="menu2" id="desc"><a href="">Año Desc</a></li>
+            <li class="menu2" id="asc"><a href=""> Date up</a></li>
+            <li class="menu2" id="desc"><a href=""></a>Date down</li>
           </ul>
         </li>
-        <li class="menu1"><a href="">Filtrar</a>
+        <li class="menu1"><a href="">Filter by</a>
           <ul>
             <li class="menu2"><a href="">Director</a>
               <ul>
@@ -52,8 +52,8 @@
     </div>
   </main>
   <footer class="footer">
-    <p id="calculo"></p>
-    <img class="imgBanner" src="img/Barra footer.jpeg" alt="">
+    <p class="textCalculo" id="calculo"></p>
+    <!-- <img class="imgBanner" src="img/Barra footer.jpeg" alt=""> -->
   </footer>
   <script src="main.js" type="module"></script>
   <script src="data.js" type="module"></script>
