ultimos ajustes en css para menu y mensaje calculo sobre barra menu, falta aun modo responsive

--- a/src/index.html
+++ b/src/index.html
@@ -22,24 +22,25 @@
         alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
   </header>
   <main class="conteiner">
+    <div class="barraTextPorcentaje"><p id="calculo"></p></div>
     <div class="menuBar">
       <ul class="nav">
-        <li class="menu1"><a href="">Sort by</a>
+        <li class="menu1"> Sort by
           <ul>
-            <li class="menu2" id="asc"><a href=""> Date up</a></li>
-            <li class="menu2" id="desc"><a href=""></a>Date down</li>
+            <li class="menu2" id="asc">Date up</li>
+            <li class="menu2" id="desc">Date down</li>
           </ul>
         </li>
-        <li class="menu1"><a href="">Filter by</a>
+        <li class="menu1"> Filter by
           <ul>
-            <li class="menu2"><a href="">Director</a>
+            <li class="menu2"> Director
               <ul>
-                <li class="menu3" id="haMi"><a href="">Hayao Miyazaki</a></li>
-                <li class="menu3" id="isTa"><a href="">Isao Takahata</a></li>
-                <li class="menu3" id="yoKo"><a href="">Yoshifumi Kondō</a></li>
-                <li class="menu3" id="hiMo"><a href="">Hiroyuki Morita</a></li>
-                <li class="menu3" id="goMi"><a href="">Gorō Miyazaki</a></li>
-                <li class="menu3" id="hiYo"><a href="">Hiromasa Yonebayashi</a></li>
+                <li class="menu3" id="haMi">Hayao Miyazaki</li>
+                <li class="menu3" id="isTa">Isao Takahata</li>
+                <li class="menu3" id="yoKo">Yoshifumi Kondō</li>
+                <li class="menu3" id="hiMo">Hiroyuki Morita</li>
+                <li class="menu3" id="goMi">Gorō Miyazaki</li>
+                <li class="menu3" id="hiYo">Hiromasa Yonebayashi</li>
               </ul>
             </li>
           </ul>
@@ -52,7 +53,6 @@
     </div>
   </main>
   <footer class="footer">
-    <p class="textCalculo" id="calculo"></p>
     <!-- <img class="imgBanner" src="img/Barra footer.jpeg" alt=""> -->
   </footer>
   <script src="main.js" type="module"></script>
