estilos corregidos a cards y menú desplegable, se agrega copyright, se soluciona el responsive, se elimina mensaje en barra al clickear en order by

--- a/src/index.html
+++ b/src/index.html
@@ -22,37 +22,37 @@
         alt="pequeño roedor blanco caminando de derecha a izquierda, dejando rastro en un fondo azul"></div>
   </header>
   <main class="conteiner">
-    <div class="barraTextPorcentaje"><p id="calculo"></p></div>
+    <div class="barraTexto"> <p id="calculo"></p></div>
     <div class="menuBar">
       <ul class="nav">
-        <li class="menu1"> Sort by
+        <li class="menu1"><a href="">Sort by</a>
           <ul>
-            <li class="menu2" id="asc">Date up</li>
-            <li class="menu2" id="desc">Date down</li>
+            <li class="menu2" id="asc"><a href=""> Date up</a></li>
+            <li class="menu2" id="desc"><a href=""></a>Date down</li>
           </ul>
         </li>
-        <li class="menu1"> Filter by
+        <li class="menu1"><a href="">Filter by</a>
           <ul>
-            <li class="menu2"> Director
+            <li class="menu2"><a href="">Director</a>
               <ul>
-                <li class="menu3" id="haMi">Hayao Miyazaki</li>
-                <li class="menu3" id="isTa">Isao Takahata</li>
-                <li class="menu3" id="yoKo">Yoshifumi Kondō</li>
-                <li class="menu3" id="hiMo">Hiroyuki Morita</li>
-                <li class="menu3" id="goMi">Gorō Miyazaki</li>
-                <li class="menu3" id="hiYo">Hiromasa Yonebayashi</li>
+                <li class="menu3" id="haMi"><a href="">Hayao Miyazaki</a></li>
+                <li class="menu3" id="isTa"><a href="">Isao Takahata</a></li>
+                <li class="menu3" id="yoKo"><a href="">Yoshifumi Kondō</a></li>
+                <li class="menu3" id="hiMo"><a href="">Hiroyuki Morita</a></li>
+                <li class="menu3" id="goMi"><a href="">Gorō Miyazaki</a></li>
+                <li class="menu3" id="hiYo"><a href="">Hiromasa Yonebayashi</a></li>
               </ul>
             </li>
           </ul>
         </li>
       </ul>
     </div>
-    
     <div class="cajafilms" id="root">
       <!-- aqui van las tarjetas de forma dinamica -->
     </div>
   </main>
   <footer class="footer">
+    <p class="copyright">Copyright by Brenda Moraga & Nicole Henríquez 2022</p>
     <!-- <img class="imgBanner" src="img/Barra footer.jpeg" alt=""> -->
   </footer>
   <script src="main.js" type="module"></script>
